--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-lottie": "^1.2.10",
+    "react-social-icons": "^6.24.0",
     "smoothscroll-polyfill": "^0.4.4",
     "tailwind-merge": "^3.3.1"
   },
