--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next dev",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,14 +17,24 @@
     "@splinetool/runtime": "^1.0.54",
     "@studio-freight/lenis": "^1.0.42",
     "@tabler/icons-react": "^3.34.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
     "framer-motion": "^12.18.1",
     "gsap": "^3.13.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.1",
     "lottie-web": "^5.13.0",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.3",
     "motion": "^12.18.1",
     "next": "^15.3.3",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.3",
+    "pino": "^9.7.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icon": "^1.0.0",
@@ -36,14 +46,22 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.3",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-lottie": "^1.2.10",
     "@types/smoothscroll-polyfill": "^0.3.4",
     "autoprefixer": "^10.4.14",
+    "cross-env": "^7.0.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
