--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-lottie": "^1.2.10",
+    "react-phone-input-2": "^2.15.1",
     "react-social-icons": "^6.24.0",
     "smoothscroll-polyfill": "^0.4.4",
     "tailwind-merge": "^3.3.1"
