--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.1",
     "lottie-web": "^5.13.0",
+    "lucide-react": "^0.539.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.3",
     "motion": "^12.18.1",
